[gd_scene load_steps=6 format=3 uid="uid://b7o2ql5f266fd"]

[ext_resource type="Script" path="res://scenes/shit_minigame.gd" id="1_8cg3n"]
[ext_resource type="Texture2D" uid="uid://onxuw4raeb3a" path="res://images/minigames/NoShitGame/shitgame_paw_y.png" id="2_dqhcd"]
[ext_resource type="Texture2D" uid="uid://cfq37gjvks7jt" path="res://images/minigames/NoShitGame/shitGame_paw_b.png" id="3_28m0p"]
[ext_resource type="Texture2D" uid="uid://df58wlnygysm0" path="res://images/minigames/NoShitGame/shitGame_paw_r.png" id="4_wtr7e"]
[ext_resource type="Texture2D" uid="uid://dablw6j1rqq6y" path="res://images/minigames/NoShitGame/shitgame_paw_g.png" id="5_c1vmv"]

[node name="NoShitMinigame" type="Control" node_paths=PackedStringArray("YellowPaw", "BluePaw", "RedPaw", "GreenPaw")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8cg3n")
YellowPaw = NodePath("YPaw")
BluePaw = NodePath("BPaw")
RedPaw = NodePath("RPaw")
GreenPaw = NodePath("GPaw")

[node name="YPaw" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 390.0
offset_top = 133.0
offset_right = -584.0
offset_bottom = -337.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_dqhcd")
ignore_texture_size = true
stretch_mode = 5

[node name="BPaw" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 569.0
offset_top = 73.0
offset_right = -405.0
offset_bottom = -397.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_28m0p")
ignore_texture_size = true
stretch_mode = 5

[node name="RPaw" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 638.0
offset_top = 248.0
offset_right = -336.0
offset_bottom = -222.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_wtr7e")
ignore_texture_size = true
stretch_mode = 5

[node name="GPaw" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 455.0
offset_top = 316.0
offset_right = -519.0
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_c1vmv")
ignore_texture_size = true
stretch_mode = 5

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 586.0
offset_right = 140.0
offset_bottom = 625.0

[connection signal="button_down" from="YPaw" to="." method="_on_y_paw_button_down"]
[connection signal="button_up" from="YPaw" to="." method="_on_y_paw_button_up"]
[connection signal="pressed" from="YPaw" to="." method="on_yellow_paw_click"]
[connection signal="button_down" from="BPaw" to="." method="_on_b_paw_button_down"]
[connection signal="button_up" from="BPaw" to="." method="_on_b_paw_button_up"]
[connection signal="pressed" from="BPaw" to="." method="on_blue_paw_click"]
[connection signal="button_down" from="RPaw" to="." method="_on_r_paw_button_down"]
[connection signal="button_up" from="RPaw" to="." method="_on_r_paw_button_up"]
[connection signal="pressed" from="RPaw" to="." method="on_red_paw_click"]
[connection signal="button_down" from="GPaw" to="." method="_on_g_paw_button_down"]
[connection signal="button_up" from="GPaw" to="." method="_on_g_paw_button_up"]
[connection signal="pressed" from="GPaw" to="." method="on_green_paw_click"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
